# vdpt

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  SANITY.md  SANITY_IMAGE.md  dev-run.sh  dev-seed-images.sh  pyproject.toml
.github/seed/: issues.json
.github/workflows/: ci.yml
artifacts/: preview_mask_analytics.json
artifacts/bundled_images/: README.md  forest.ppm  ocean.ppm  sunrise.ppm
backend/: __init__.py  app.py  requirements.txt  schemas.py  services.py
backend/app/: __init__.py  main.py  run_index.py  schemas.py  types.py
backend/app/datasets/: __init__.py  base.py  cityscapes.py  coco.py  hf.py
backend/app/ops/: base.py  cluster.py  embed.py  image_ops.py  registry.py  segment.py
backend/app/preview/: preview_engine.py  (+1 more)
backend/tests/: __init__.py  test_preview_api.py  test_preview_text_and_images.py
backend/vdpt/: __init__.py  io.py
data/: sample_news.csv
docs/: pr_body.md  provenance-pr-body.md  segmentation_mask_analytics.md
samples/: plan_news_summarize.json
samples/images/: README.md
scripts/: seed_issues.py  sync_repo_metadata.py
tests/: conftest.py  test_health.py  test_image_preview_execute.py  test_ops_tabular.py  test_preview_filter_real.py  test_preview_segment_real.py  test_preview_stub.py  test_provenance.py  test_provider_factory.py  test_provider_loader.py  test_provider_mock.py  test_smoke.py  test_streamlit_metrics.py  test_todos.py  test_vision_provider_registry.py
tests/assets/: sample.csv
ui/: assets.py  requirements.txt  sample_data.py  streamlit_app.py
ui/utils/: keys.py
(+22 files in other folders)
