[tool.ruff]
line-length = 100
extend-exclude = ["artifacts", "data", "dist", "node_modules", ".venv", "frontend/artifacts"]

[tool.black]
line-length = 100
exclude = '''
/( 
  artifacts
| data
| dist
| node_modules
| \.venv
| frontend/artifacts
)/
'''

[project]
name = "vdpt"
version = "0.1.0"
dependencies = [
    "open-clip-torch",
    "umap-learn",
    "hdbscan",
    "segment-anything",
    "transformers",
    "torch",
    "datasets",
]
